--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="title_TicketList">Ticket List</string>
+    <string name="title_Map">Map</string>
+    <string name="title_activity_get_employee_id">GetEmployeeID</string>
+    <string name="CurrentEmployeeID">Current_Employee_ID</string>
 </resources>
