--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="title_Map">Map</string>
     <string name="title_activity_get_employee_id">GetEmployeeID</string>
     <string name="CurrentEmployeeID">Current_Employee_ID</string>
+    <string name="ID_entered">ID_entered</string>
 </resources>
